--- a/bebeclick.webclient/Resources/Account.es.resx
+++ b/bebeclick.webclient/Resources/Account.es.resx
@@ -117,6 +117,15 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="ComparePassword" xml:space="preserve">
+    <value>Las contraseñas no coinciden.</value>
+  </data>
+  <data name="ConfirmPassword" xml:space="preserve">
+    <value>Confirmar contraseña</value>
+  </data>
+  <data name="ConfirmPasswordRequired" xml:space="preserve">
+    <value>* Campo requerido.</value>
+  </data>
   <data name="Email" xml:space="preserve">
     <value>Correo electónico</value>
   </data>
@@ -150,6 +159,9 @@
   <data name="Password" xml:space="preserve">
     <value>Contraseña</value>
   </data>
+  <data name="PasswordLength" xml:space="preserve">
+    <value>La longitud mínima de la {0} es de {2}.</value>
+  </data>
   <data name="PasswordPlaceHolder" xml:space="preserve">
     <value>Contraseña</value>
   </data>
@@ -157,7 +169,10 @@
     <value>* Campo requerido.</value>
   </data>
   <data name="RegisterNewUser" xml:space="preserve">
-    <value>Registrate</value>
+    <value>Regístrate</value>
+  </data>
+  <data name="RegisterTitle" xml:space="preserve">
+    <value>Registro</value>
   </data>
   <data name="RememberMe" xml:space="preserve">
     <value>Recordarme</value>
