--- a/bebeclick.webclient/Resources/Account.resx
+++ b/bebeclick.webclient/Resources/Account.resx
@@ -117,6 +117,15 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="ComparePassword" xml:space="preserve">
+    <value>The password and confirmation password do not match.</value>
+  </data>
+  <data name="ConfirmPassword" xml:space="preserve">
+    <value>Confirm password</value>
+  </data>
+  <data name="ConfirmPasswordRequired" xml:space="preserve">
+    <value>* Required field.</value>
+  </data>
   <data name="Email" xml:space="preserve">
     <value>Email</value>
   </data>
@@ -150,6 +159,9 @@
   <data name="Password" xml:space="preserve">
     <value>Password</value>
   </data>
+  <data name="PasswordLength" xml:space="preserve">
+    <value>The {0} must be at least {2} characters long.</value>
+  </data>
   <data name="PasswordPlaceHolder" xml:space="preserve">
     <value>Password</value>
   </data>
@@ -158,6 +170,9 @@
   </data>
   <data name="RegisterNewUser" xml:space="preserve">
     <value>Register new user</value>
+  </data>
+  <data name="RegisterTitle" xml:space="preserve">
+    <value>Create a new account</value>
   </data>
   <data name="RememberMe" xml:space="preserve">
     <value>Remember me?</value>
