--- a/bebeclick/App_GlobalResources/General.es.resx
+++ b/bebeclick/App_GlobalResources/General.es.resx
@@ -135,6 +135,9 @@
   <data name="LoginLink" xml:space="preserve">
     <value>Iniciar Sesión</value>
   </data>
+  <data name="LogoutLink" xml:space="preserve">
+    <value>Salir</value>
+  </data>
   <data name="RecommendButton" xml:space="preserve">
     <value>Recomienda</value>
   </data>
