--- a/bebeclick/App_GlobalResources/General.resx
+++ b/bebeclick/App_GlobalResources/General.resx
@@ -129,6 +129,9 @@
   <data name="HomeLink" xml:space="preserve">
     <value>Home</value>
   </data>
+  <data name="HomeTitle" xml:space="preserve">
+    <value>Bebeclick</value>
+  </data>
   <data name="InspirationLink" xml:space="preserve">
     <value>Inspiration</value>
   </data>
@@ -137,6 +140,9 @@
   </data>
   <data name="LogoutLink" xml:space="preserve">
     <value>Log out</value>
+  </data>
+  <data name="ManageTitle" xml:space="preserve">
+    <value>Manage your account</value>
   </data>
   <data name="RecommendButton" xml:space="preserve">
     <value>Recommend</value>
