--- a/bebeclick.webclient/Resources/Account.es.resx
+++ b/bebeclick.webclient/Resources/Account.es.resx
@@ -129,9 +129,6 @@
   <data name="CityRequired" xml:space="preserve">
     <value>* Campo requerido.</value>
   </data>
-  <data name="CitySelect" xml:space="preserve">
-    <value>Selecciona una ciudad</value>
-  </data>
   <data name="ComparePassword" xml:space="preserve">
     <value>Las contraseñas no coinciden.</value>
   </data>
@@ -140,6 +137,15 @@
   </data>
   <data name="ConfirmPasswordRequired" xml:space="preserve">
     <value>* Campo requerido.</value>
+  </data>
+  <data name="EditProfile" xml:space="preserve">
+    <value>Update</value>
+  </data>
+  <data name="EditProfileTitle" xml:space="preserve">
+    <value>Completa tu perfil.</value>
+  </data>
+  <data name="EditProfileValidationSummary" xml:space="preserve">
+    <value>Error durante la actualización.</value>
   </data>
   <data name="Email" xml:space="preserve">
     <value>Correo electónico</value>
@@ -233,8 +239,5 @@
   </data>
   <data name="StateRequired" xml:space="preserve">
     <value>* Campo requerido.</value>
-  </data>
-  <data name="StateSelect" xml:space="preserve">
-    <value>Selecciona un estado</value>
   </data>
 </root>
