--- a/bebeclick/App_GlobalResources/General.resx
+++ b/bebeclick/App_GlobalResources/General.resx
@@ -126,6 +126,12 @@
   <data name="EnterpriseLink" xml:space="preserve">
     <value>Enterprise</value>
   </data>
+  <data name="Female" xml:space="preserve">
+    <value>Female</value>
+  </data>
+  <data name="GenderSelect" xml:space="preserve">
+    <value>Select a gender</value>
+  </data>
   <data name="GoButton" xml:space="preserve">
     <value>Go</value>
   </data>
@@ -143,6 +149,9 @@
   </data>
   <data name="LogoutLink" xml:space="preserve">
     <value>Log out</value>
+  </data>
+  <data name="Male" xml:space="preserve">
+    <value>Male</value>
   </data>
   <data name="ManageTitle" xml:space="preserve">
     <value>Manage your account</value>
