--- a/bebeclick/App_GlobalResources/General.es.resx
+++ b/bebeclick/App_GlobalResources/General.es.resx
@@ -123,8 +123,17 @@
   <data name="ContactLink" xml:space="preserve">
     <value>Contacto</value>
   </data>
+  <data name="EditProfileTitle" xml:space="preserve">
+    <value>Completa tu perfil.</value>
+  </data>
   <data name="EnterpriseLink" xml:space="preserve">
     <value>Empresas</value>
+  </data>
+  <data name="ExternalLoginSubtitle" xml:space="preserve">
+    <value>Asocia tu cuenta de {0}.</value>
+  </data>
+  <data name="ExternalLoginTitle" xml:space="preserve">
+    <value>Completa tu perfil</value>
   </data>
   <data name="Female" xml:space="preserve">
     <value>Femenino</value>
@@ -144,8 +153,14 @@
   <data name="InspirationLink" xml:space="preserve">
     <value>Inspiración</value>
   </data>
+  <data name="LoginExternalTitle" xml:space="preserve">
+    <value>Iniciar sesión con tu cuenta {0}.</value>
+  </data>
   <data name="LoginLink" xml:space="preserve">
     <value>Iniciar Sesión</value>
+  </data>
+  <data name="LoginTitle" xml:space="preserve">
+    <value>Iniciar sesión</value>
   </data>
   <data name="LogoutLink" xml:space="preserve">
     <value>Salir</value>
@@ -171,6 +186,9 @@
   <data name="RegisterLink" xml:space="preserve">
     <value>Regístrate</value>
   </data>
+  <data name="RegisterTitle" xml:space="preserve">
+    <value>Registro</value>
+  </data>
   <data name="SearchLink" xml:space="preserve">
     <value>Busca</value>
   </data>
@@ -185,5 +203,8 @@
   </data>
   <data name="StateSelect" xml:space="preserve">
     <value>Selecciona un estado</value>
+  </data>
+  <data name="WelcomeTitle" xml:space="preserve">
+    <value>¡Bienvenido!</value>
   </data>
 </root>
