--- a/bebeclick/App_GlobalResources/General.resx
+++ b/bebeclick/App_GlobalResources/General.resx
@@ -123,8 +123,17 @@
   <data name="ContactLink" xml:space="preserve">
     <value>Contact</value>
   </data>
+  <data name="EditProfileTitle" xml:space="preserve">
+    <value>Complete your profile.</value>
+  </data>
   <data name="EnterpriseLink" xml:space="preserve">
     <value>Enterprise</value>
+  </data>
+  <data name="ExternalLoginSubtitle" xml:space="preserve">
+    <value>Associate your {0} account.</value>
+  </data>
+  <data name="ExternalLoginTitle" xml:space="preserve">
+    <value>Register</value>
   </data>
   <data name="Female" xml:space="preserve">
     <value>Female</value>
@@ -144,8 +153,14 @@
   <data name="InspirationLink" xml:space="preserve">
     <value>Inspiration</value>
   </data>
+  <data name="LoginExternalTitle" xml:space="preserve">
+    <value>Log in with your {0} account.</value>
+  </data>
   <data name="LoginLink" xml:space="preserve">
     <value>Login</value>
+  </data>
+  <data name="LoginTitle" xml:space="preserve">
+    <value>Log in</value>
   </data>
   <data name="LogoutLink" xml:space="preserve">
     <value>Log out</value>
@@ -171,6 +186,9 @@
   <data name="RegisterLink" xml:space="preserve">
     <value>Register</value>
   </data>
+  <data name="RegisterTitle" xml:space="preserve">
+    <value>Register</value>
+  </data>
   <data name="SearchLink" xml:space="preserve">
     <value>Search</value>
   </data>
@@ -185,5 +203,8 @@
   </data>
   <data name="StateSelect" xml:space="preserve">
     <value>Select a state</value>
+  </data>
+  <data name="WelcomeTitle" xml:space="preserve">
+    <value>Welcome!</value>
   </data>
 </root>
